Create unordered list

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-
+  <header>
+    <h1>Berries</h1>
+    <nav>
+      <ul>
+        <li>Home</li>
+        <li>Blueberries</li>
+        <li>Grapes</li>
+        <li>Red Currants</li>
+      </nav>
+  </header>
 </body>
 </html>
