Input syntax things

--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
     <h1>Berries</h1>
     <nav>
       <ul>
-        <li>Home</li>
-        <li>Blueberries</li>
-        <li>Grapes</li>
-        <li>Red Currants</li>
-      </nav>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="blueberries.html">Blueberries</a></li>
+        <li><a href="grapes.html">Grapes</a></li>
+        <li><a href="red-currants.html">Red Currants</a></li>
+      </ul>
+    </nav>
   </header>
+
 </body>
 </html>
