--- a/grapes.html
+++ b/grapes.html
@@ -7,6 +7,16 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-
+  <header>
+    <h1>Berries</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="blueberries.html">Blueberries</a></li>
+        <li><a href="grapes.html">Grapes</a></li>
+        <li><a href="red-currants.html">Red Currants</a></li>
+      </ul>
+    </nav>
+  </header>
 </body>
 </html>
