--- a/blueberries.html
+++ b/blueberries.html
@@ -18,5 +18,9 @@
       </ul>
     </nav>
   </header>
+  <h2>Blueberries</h2>
+  <img src="images/blueberries.jpg" alt="">
+  <p>Blueberries are perennial flowering plants with indigo-colored berries. Most common fruits sold as “blueberries” and are native to North America.</p>
 </body>
+<footer>© Berries</footer>
 </html>
