--- a/grapes.html
+++ b/grapes.html
@@ -18,5 +18,9 @@
       </ul>
     </nav>
   </header>
+  <h2>Grapes</h2>
+  <img src="images/grapes.jpg" alt="">
+  <p>Grapes can be eaten raw or they can be used for making wine, jam, juice, jelly, grape seed extract, raisins, vinegar, and grape seed oil.</p>
 </body>
+<footer>© Berries</footer>
 </html>
