--- a/red-currants.html
+++ b/red-currants.html
@@ -18,5 +18,9 @@
       </ul>
     </nav>
   </header>
+  <h2>Red-currants</h2>
+  <img src="images/red-currants.jpg" alt="">
+  <p>With maturity, the tart flavour of redcurrant fruit is slightly greater than its blackcurrant relative, but with the same approximate sweetness.</p>
 </body>
+<footer>© Berries</footer>
 </html>
