Input specifics for blueberries

--- a/blueberries.html
+++ b/blueberries.html
@@ -5,6 +5,7 @@
   <title>Blueberries</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Serif|Sigmar+One" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -21,6 +22,6 @@
   <h2>Blueberries</h2>
   <img src="images/blueberries.jpg" alt="">
   <p>Blueberries are perennial flowering plants with indigo-colored berries. Most common fruits sold as “blueberries” and are native to North America.</p>
-</body>
 <footer>© Berries</footer>
+</body>
 </html>
