--- a/red-currants.html
+++ b/red-currants.html
@@ -5,6 +5,7 @@
   <title>Red Currents</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Serif|Sigmar+One" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -21,6 +22,6 @@
   <h2>Red-currants</h2>
   <img src="images/red-currants.jpg" alt="">
   <p>With maturity, the tart flavour of redcurrant fruit is slightly greater than its blackcurrant relative, but with the same approximate sweetness.</p>
+  <footer>© Berries</footer>
 </body>
-<footer>© Berries</footer>
 </html>
