--- a/grapes.html
+++ b/grapes.html
@@ -5,6 +5,7 @@
   <title>Grapes</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Serif|Sigmar+One" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -21,6 +22,6 @@
   <h2>Grapes</h2>
   <img src="images/grapes.jpg" alt="">
   <p>Grapes can be eaten raw or they can be used for making wine, jam, juice, jelly, grape seed extract, raisins, vinegar, and grape seed oil.</p>
-</body>
 <footer>© Berries</footer>
+</body>
 </html>
