--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Berries</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Serif|Sigmar+One" rel="stylesheet">
 </head>
 <body>
   <header>
