--- a/blueberries.html
+++ b/blueberries.html
@@ -11,7 +11,7 @@
   <header>
     <h1>Berries</h1>
     <nav>
-      <ul>
+      <ul class="navigation">
         <li><a href="index.html">Home</a></li>
         <li><a href="blueberries.html">Blueberries</a></li>
         <li><a href="grapes.html">Grapes</a></li>
@@ -22,6 +22,8 @@
   <h2>Blueberries</h2>
   <img src="images/blueberries.jpg" alt="">
   <p>Blueberries are perennial flowering plants with indigo-colored berries. Most common fruits sold as “blueberries” and are native to North America.</p>
-  <footer>© Berries</footer>
+  <footer>
+    <p><small>© Berries.</small></p>
+  </footer>
 </body>
 </html>
