--- a/grapes.html
+++ b/grapes.html
@@ -11,7 +11,7 @@
   <header>
     <h1>Berries</h1>
     <nav>
-      <ul>
+      <ul class="navigation">
         <li><a href="index.html">Home</a></li>
         <li><a href="blueberries.html">Blueberries</a></li>
         <li><a href="grapes.html">Grapes</a></li>
@@ -22,6 +22,8 @@
   <h2>Grapes</h2>
   <img src="images/grapes.jpg" alt="">
   <p>Grapes can be eaten raw or they can be used for making wine, jam, juice, jelly, grape seed extract, raisins, vinegar, and grape seed oil.</p>
-  <footer>© Berries</footer>
+  <footer>
+    <p><small>© Berries.</small></p>
+  </footer>
 </body>
 </html>
