--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <h1>Berries</h1>
     <nav>
-      <ul>
+      <ul class="navigation">
         <li><a href="index.html">Home</a></li>
         <li><a href="blueberries.html">Blueberries</a></li>
         <li><a href="grapes.html">Grapes</a></li>
@@ -23,6 +23,8 @@
     <h2>Berries, berries, oh my!</h2>
     <p>In everyday English, “berry” is a term for any small edible fruit. These “berries” are usually <b>juicy</b>, <b>round</b>, brightly coloured, sweet or sour, and do not have a stone or pit, although many seeds may be present.</p>
   </main>
-  <footer>© Berries</footer>
+  <footer>
+    <p><small>© Berries.</small></p>
+  </footer>
 </body>
 </html>
