--- a/red-currants.html
+++ b/red-currants.html
@@ -11,7 +11,7 @@
   <header>
     <h1>Berries</h1>
     <nav>
-      <ul>
+      <ul class="navigation">
         <li><a href="index.html">Home</a></li>
         <li><a href="blueberries.html">Blueberries</a></li>
         <li><a href="grapes.html">Grapes</a></li>
@@ -22,6 +22,8 @@
   <h2>Red-currants</h2>
   <img src="images/red-currants.jpg" alt="">
   <p>With maturity, the tart flavour of redcurrant fruit is slightly greater than its blackcurrant relative, but with the same approximate sweetness.</p>
-  <footer>© Berries</footer>
+  <footer>
+    <p><small>© Berries.</small></p>
+  </footer>
 </body>
 </html>
