--- a/blueberries.html
+++ b/blueberries.html
@@ -13,7 +13,7 @@
     <nav>
       <ul class="navigation">
         <li><a href="index.html">Home</a></li>
-        <li><a href="blueberries.html">Blueberries</a></li>
+        <li><a class="current" href="blueberries.html">Blueberries</a></li>
         <li><a href="grapes.html">Grapes</a></li>
         <li><a href="red-currants.html">Red Currants</a></li>
       </ul>
