--- a/blueberries.html
+++ b/blueberries.html
@@ -19,9 +19,11 @@
       </ul>
     </nav>
   </header>
-  <h2>Blueberries</h2>
-  <img src="images/blueberries.jpg" alt="">
-  <p>Blueberries are perennial flowering plants with indigo-colored berries. Most common fruits sold as “blueberries” and are native to North America.</p>
+  <main>
+    <h2>Blueberries</h2>
+    <img src="images/blueberries.jpg" alt="">
+    <p>Blueberries are perennial flowering plants with indigo-colored berries. Most common fruits sold as “blueberries” and are native to North America.</p>
+</main>
   <footer>
     <p><small>© Berries.</small></p>
   </footer>
