--- a/grapes.html
+++ b/grapes.html
@@ -19,9 +19,11 @@
       </ul>
     </nav>
   </header>
-  <h2>Grapes</h2>
-  <img src="images/grapes.jpg" alt="">
-  <p>Grapes can be eaten raw or they can be used for making wine, jam, juice, jelly, grape seed extract, raisins, vinegar, and grape seed oil.</p>
+  <main>
+    <h2>Grapes</h2>
+    <img src="images/grapes.jpg" alt="">
+    <p>Grapes can be eaten raw or they can be used for making wine, jam, juice, jelly, grape seed extract, raisins, vinegar, and grape seed oil.</p>
+</main>
   <footer>
     <p><small>© Berries.</small></p>
   </footer>
