--- a/red-currants.html
+++ b/red-currants.html
@@ -19,9 +19,11 @@
       </ul>
     </nav>
   </header>
-  <h2>Red-currants</h2>
-  <img src="images/red-currants.jpg" alt="">
-  <p>With maturity, the tart flavour of redcurrant fruit is slightly greater than its blackcurrant relative, but with the same approximate sweetness.</p>
+  <main>
+    <h2>Red-currants</h2>
+    <img src="images/red-currants.jpg" alt="">
+    <p>With maturity, the tart flavour of redcurrant fruit is slightly greater than its blackcurrant relative, but with the same approximate sweetness.</p>
+  </main>
   <footer>
     <p><small>© Berries.</small></p>
   </footer>
